--- a/paginas/reservatuturno.html
+++ b/paginas/reservatuturno.html
@@ -10,13 +10,41 @@
 </head>
 <body>
     <body>
-        <header>       <nav id="arriba"> 
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../paginas/sobremi.html">Sobre Mi</a></li>
-                <li><a href="../paginas/consultorios.html">Consultorios</a></li>
-                <li><a href="../paginas/contacto.html">Contacto</a></li>
-            </ul>
+        <header>       
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="../index.html">Dr. Muzzopappa</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../paginas/consultorios.html">Consultorios</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item" href="../paginas/reservatuturno.html">Reservá un turno</li>
+                          <li><a class="dropdown-item" href="../paginas/contacto.html">Contacto</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="../paginas/sobremi.html">Sobre Mi</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Buscá</button>
+                      </form>
+                    </div>
+                  </div>
+                </nav>
+        </nav>
         </header>
         <main class="reservaDeTurno">
             <img src="../multimedia/doc.jpeg" alt="Doctor"  widht="300" height="300">
